compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/functionAndProperty/functionAndSetter.kt
// RUN_PIPELINE_TILL: BACKEND
// DIAGNOSTICS: -UNUSED_PARAMETER

class C {
    <!CONFLICTING_JVM_DECLARATIONS!>fun setX(x: Int) {}<!>

    <!CONFLICTING_JVM_DECLARATIONS!>var x: Int<!> = 1
}

/* GENERATED_FIR_TAGS: classDeclaration, functionDeclaration, integerLiteral, propertyDeclaration */
